--- a/style.css
+++ b/style.css
@@ -1,20 +1,23 @@
+
 #div1{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+   
     background-color: #eb8484;
 
 }
 #div2{
+    margin: auto;
     display: flex;
+    position: relative;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 500px;
     height: 500px;
-    background-color:rgb(252, 249, 249);
+    background-color:rgb(92, 148, 97);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
